--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,68 +1,28 @@
-#navbar {
-    overflow: hidden;
-    background-color: #a1f1b5;
-    padding: 90px 10px; /* Large padding which will shrink on scroll (using JS) */
-    transition: 0.4s; /* Adds a transition effect when the padding is decreased */
-    position: fixed; /* Sticky/fixed navbar */
+header {
+    box-sizing: border-box;
+    padding: 8px;
+    background-color: #ADC5FF;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
+    box-shadow: 0 6px 20px -11px #D432E6;
+
+    position: fixed;
+    top: 0;
     width: 100%;
-    top: 0; /* At the top */
-    z-index: 99;
+    max-width: 960px;
 }
 
-/* Style the navbar links */
-#navbar a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
+.navbar {
+    display: flex;
+    align-items: center;
+}
+.navbar>li{
+    list-style-type: none;
+    padding: 0 8px;
 }
 
-/* Style the logo */
-#navbar #logo {
-    font-size: 35px;
-    font-weight: bold;
-    transition: 0.4s;
-}
-
-/* Links on mouse-over */
-#navbar a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-/* Style the active/current link */
-#navbar a.active {
-    background-color: dodgerblue;
-    color: white;
-}
-
-/* Display some links to the right */
-#navbar-right {
-    float: right;
-}
-
-/* Add responsiveness - on screens less than 580px wide, display the navbar vertically instead of horizontally */
-@media screen and (max-width: 580px) {
-    #navbar {
-        padding: 20px 10px !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
-    }
-    #navbar a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-    #navbar-right {
-        float: none;
-    }
-}
-.navbar-avatar {
-    width: 105px;
+.login100-form-avatar2 {
     height: 60px;
-    border-radius: 50%;
-    overflow: hidden;
-    margin: 0 auto;
+    margin-right: auto;
 }
+.login100-form-avatar2 img{ height: 100%}
