--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -1,128 +1,121 @@
-.form-4 {
-    /* Size and position */
-    width: 300px;
-    margin: 60px auto 30px;
-    padding: 10px;
-    position: relative;
-
-    /* Font styles */
-    font-family: 'Raleway', 'Lato', Arial, sans-serif;
-    color: white;
-    text-shadow: 0 2px 1px rgba(0,0,0,0.3);
-}
-
-.form-4 h1 {
-    font-size: 22px;
-    padding-bottom: 20px;
-}
-
-.form-4 input[type=text],
-.form-4 input[type=password] {
-    /* Size and position */
+.limiter {
     width: 100%;
-    padding: 8px 4px 8px 10px;
-    margin-bottom: 15px;
-
-    /* Styles */
-    border: 1px solid #4e3043; /* Fallback */
-    border: 1px solid rgba(78,48,67, 0.8);
-    background: rgba(0,0,0,0.15);
-    border-radius: 2px;
-    box-shadow:
-            0 1px 0 rgba(255,255,255,0.2),
-            inset 0 1px 1px rgba(0,0,0,0.1);
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-
-    /* Font styles */
-    font-family: 'Raleway', 'Lato', Arial, sans-serif;
-    color: #fff;
-    font-size: 13px;
+    margin: 0 auto;
 }
 
-.form-4 input::-webkit-input-placeholder {
-    color: rgba(37,21,26,0.5);
-    text-shadow: 0 1px 0 rgba(255,255,255,0.15);
+.container-login100 {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    /*background: #fff;*/
 }
 
-.form-4 input:-moz-placeholder {
-    color: rgba(37,21,26,0.5);
-    text-shadow: 0 1px 0 rgba(255,255,255,0.15);
+.wrap-login {
+    width: 100%;
+    max-width: 390px;
+    padding: 0 24px;
+    /*background: #fff;*/
 }
 
-.form-4 input:-ms-input-placeholder {
-    color: rgba(37,21,26,0.5);
-    text-shadow: 0 1px 0 rgba(255,255,255,0.15);
+/*------------------------------------------------------------------
+[ Form ]*/
+.login100-form {
+    width: 100%;
 }
 
-.form-4 input[type=text]:hover,
-.form-4 input[type=password]:hover {
-    border-color: #333;
+.login100-form-title {
+    display: block;
+    font-family: Poppins-Bold;
+    font-size: 39px;
+    color: #333333;
+    line-height: 1.2;
+    text-align: center;
 }
 
-.form-4 input[type=text]:focus,
-.form-4 input[type=password]:focus,
-.form-4 input[type=submit]:focus {
-    box-shadow:
-            0 1px 0 rgba(255,255,255,0.2),
-            inset 0 1px 1px rgba(0,0,0,0.1),
-            0 0 0 3px rgba(255,255,255,0.15);
+.login100-form-avatar {
+    display: block;
+    width: 240px;
+    height: 180px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+.login100-form-avatar img {
+    width: 100%;
+}
+
+/*------------------------------------------------------------------
+[ Input ]*/
+
+.wrap-input100 {
+    width: 100%;
+    position: relative;
+}
+
+.input100 {
+    font-size: 18px;
+    color: #555555;
+    line-height: 1.2;
+
+    display: block;
+    width: 100%;
+    height: 52px;
+    background: transparent;
+    padding: 0 8px;
+}
+
+.input100:focus {
+    border-right: none;
+    border-left: none;
+    border-top: none;
+    border-bottom: 2px solid #A5BBF5;
     outline: none;
 }
 
-/* Fallback */
-.no-boxshadow .form-4 input[type=text]:focus,
-.no-boxshadow .form-4 input[type=password]:focus {
-    outline: 1px solid white;
+.input100::placeholder {
+    color: #bfbfbf;
 }
 
-.form-4 input[type=submit] {
-    /* Size and position */
-    width: 100%;
-    padding: 8px 5px;
+/*------------------------------------------------------------------
+[ Button ]*/
 
-    /* Styles */
-    background: linear-gradient(rgba(99,64,86,0.5), rgba(76,49,65,0.7));
-    border-radius: 5px;
-    border: 1px solid #4e3043;
-    box-shadow:
-            inset 0 1px rgba(255,255,255,0.4),
-            0 2px 1px rgba(0,0,0,0.1);
-    cursor: pointer;
-    transition: all 0.3s ease-out;
+.container-login100-form-btn {
+    padding: 16px;
+}
 
-    /* Font styles */
-    color: white;
-    text-shadow: 0 1px 0 rgba(0,0,0,0.3);
+
+.login100-form-btn {
+    font-family: Poppins-Medium;
     font-size: 16px;
-    font-weight: bold;
-    font-family: 'Raleway', 'Lato', Arial, sans-serif;
+    color: #fff;
+    line-height: 1.2;
+    text-transform: uppercase;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    width: 100%;
+    height: 50px;
+    background-color: #A025AC;
+    border-radius: 25px;
+
+    box-shadow: 0 10px 30px 0px #A025AC;
+    border: none;
+    transition: all 0.4s;
 }
 
-.form-4 input[type=submit]:hover {
-    box-shadow:
-            inset 0 1px rgba(255,255,255,0.2),
-            inset 0 20px 30px rgba(99,64,86,0.5);
+.login100-form-btn:focus {
+    background-color: #8D2299;
+    box-shadow: 0 8px 20px 0px #8D2299;
+    outline: none;
 }
 
-/* Fallback */
-.no-boxshadow .form-4 input[type=submit]:hover {
-    background: #594642;
-}
-
-.form-4 label {
-    display: none;
-    padding: 0 0 5px 2px;
-    cursor: pointer;
-}
-
-.form-4 label:hover ~ input {
-    border-color: #333;
-}
-
-.no-placeholder .form-4 label {
-    display: block;
+.login100-form-btn:active {
+    background-color: #761C80;
+    box-shadow: 0 8px 20px 0px #761C80;
 }
