--- a/src/main/webapp/resources/css/menu.css
+++ b/src/main/webapp/resources/css/menu.css
@@ -1,52 +1,32 @@
+
 .category-wrap {
-    padding: 15px;
-    background: white;
-    width: 200px;
-    box-shadow: 2px 2px 8px rgba(0,0,0,.1);
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background: #ADC5FF;
+    padding: 8px 0;
+    border-radius: 8px;
 }
+
 .category-wrap h3 {
-    font-size: 16px;
-    color: rgba(0,0,0,.6);
-    margin: 0 0 10px;
-    padding: 0 5px;
-    position: relative;
+    padding: 0 8px;
 }
-.category-wrap h3:after {
-    content: "";
-    width: 6px;
-    height: 6px;
-    background: #80C8A0;
-    position: absolute;
-    right: 5px;
-    bottom: 2px;
-    box-shadow: -8px -8px #80C8A0, 0 -8px #80C8A0, -8px 0 #80C8A0;
+
+.aside-menu li {
+    list-style-type: none;
+    font-weight: 300;
 }
-.category-wrap ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    border-top: 1px solid rgba(0,0,0,.3);
+
+.aside-menu li.active a{
+    color: #29c5e6;
 }
-.category-wrap li {margin: 12px 0 0 0px;}
-.category-wrap a {
+
+.aside-menu a {
+    width: 100%;
+    padding: 8px 16px;
     text-decoration: none;
+    /*color: #8f8f8f;*/
+    font-size: 20px;
     display: block;
-    font-size: 13px;
-    color: rgba(0,0,0,.6);
-    padding: 5px;
-    position: relative;
-    transition: .3s linear;
 }
-.category-wrap a:after {
-    content:"\f18e";
-    font-family: FontAwesome;
-    position: absolute;
-    right: 5px;
-    color: white;
-    transition: .2s linear;
-}
-.category-wrap a:hover {
-    background: #80C8A0;
-    color: white;
+
+.aside-menu a:hover {
+    color: #8f8f8f;
 }
