--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,10 +1,11 @@
 header {
     box-sizing: border-box;
     padding: 8px;
-    background-color: #ADC5FF;
+    background-color: #383D50;
     border-bottom-left-radius: 16px;
     border-bottom-right-radius: 16px;
-    box-shadow: 0 6px 20px -11px #D432E6;
+    box-shadow: 0 6px 20px -11px #383D50;
+    opacity: 58%;
 
     position: fixed;
     top: 0;
