--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -20,6 +20,10 @@
     /*background: #fff;*/
 }
 
+input[type="text"], input[type="password"], input:-internal-autofill-selected {
+    background-color: transparent !important;
+}
+
 /*------------------------------------------------------------------
 [ Form ]*/
 .login100-form {
@@ -37,9 +41,8 @@
 
 .login100-form-avatar {
     display: block;
-    width: 240px;
-    height: 180px;
-    border-radius: 50%;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     margin: 0 auto;
 }
@@ -58,7 +61,6 @@
 
 .input100 {
     font-size: 18px;
-    color: #555555;
     line-height: 1.2;
 
     display: block;
@@ -66,18 +68,20 @@
     height: 52px;
     background: transparent;
     padding: 0 8px;
+    margin-bottom: 7px;
+
 }
 
 .input100:focus {
     border-right: none;
     border-left: none;
     border-top: none;
-    border-bottom: 2px solid #A5BBF5;
+    border-bottom: 2px solid #E1D070;
     outline: none;
 }
 
 .input100::placeholder {
-    color: #bfbfbf;
+    background-color:  transparent !important;
 }
 
 /*------------------------------------------------------------------
@@ -101,10 +105,10 @@
     padding: 0 20px;
     width: 100%;
     height: 50px;
-    background-color: #A025AC;
+    background-color: #E1D070;
     border-radius: 25px;
 
-    box-shadow: 0 10px 30px 0px #A025AC;
+    box-shadow: 0 10px 30px 0px #E1D070;
     border: none;
     transition: all 0.4s;
 }
