--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -2,10 +2,7 @@
     padding: 0;
     margin: 0;
 }
-body{
-    background: rgba(165,187,245, 0.1);
-    background: linear-gradient(to bottom, rgba(165,187,245, 0.2) 0%, rgba(234,203,255,0.2) 100%);
-}
+
 
 input{
     font-family: Poppins-SemiBold;
@@ -117,12 +114,6 @@ figure img {
     outline: 1px solid #c9c9c9;
 }
 
-figure figcaption {
-    font-size: 16px;
-    font-weight: 300;
-    margin-top: 5px;
-}
-
 figure figcaption span {
     display: block;
     font-size: 14px;
@@ -131,4 +122,177 @@ figure figcaption span {
 
 section > figure + figure {
     margin-left: 28px;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+}
+
+.card > img {
+    border-radius: 5px 5px 0 0;
+}
+#myUL > {
+    margin: 0;
+    padding: 0;
+}
+
+#myUL > li {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    background: #eee;
+    font-size: 18px;
+    transition: 0.2s;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+#myUL > li:nth-child(odd) {
+    background: #f9f9f9;
+}
+
+#myUL > li:hover {
+    background: #ddd;
+}
+
+#myUL > li.checked {
+    background: #888;
+    color: #fff;
+    text-decoration: line-through;
+}
+
+#myUL > li.checked::before {
+    content: '';
+    position: absolute;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px;
+}
+
+.close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+}
+
+.close:hover {
+    background-color: #f44336;
+    color: white;
+}
+
+.header {
+    background-color: #ADC5FF;
+    padding: 10px 40px;
+    color: white;
+    text-align: center;
+    height: 8%;
+}
+
+.header:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.card > input {
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    width: 75%;
+    padding: 10px;
+    float: left;
+    font-size: 16px;
+}
+
+.addBtn {
+    padding: 10px;
+    width: 15%;
+    background: #d9d9d9;
+    color: #555;
+    float: left;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 0;
+}
+
+.addBtn:hover {
+    background-color: #bbb;
+}
+.container1 {
+    border: 2px solid #dedede;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 35px 0;
+    height: 120px;
+    position: relative;
+}
+
+/* Darker chat container */
+.darker {
+    border-color: #ccc;
+    background-color: #ddd;
+    margin-left: 35px;
+}
+
+/* Clear floats */
+.container1::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+/* Style images */
+.container1 img {
+    float: left;
+    max-width: 60px;
+    width: 100%;
+    margin-right: 20px;
+    border-radius: 50%;
+}
+
+/* Style the right image */
+.container1 img.right {
+    float: right;
+    margin-left: 20px;
+    margin-right:0;
+}
+
+/* Style time text */
+.time-right {
+    float: right;
+    color: #aaa;
+}
+
+/* Style time text */
+.time-left {
+    float: left;
+    color: #999;
+}
+.checked {
+    color: orange;
+}
+.content{
+    margin-top: 90px;
+}
+
+#footer  {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
 }
