--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -197,10 +197,9 @@ section > figure + figure {
     padding: 10px 40px;
     color: white;
     text-align: center;
-    height: 14%;
-
+    height: 9%;
     margin-bottom: 6%;
-
+    border-radius: 6px;
 }
 
 .header:after {
