--- a/src/main/webapp/resources/css/menu.css
+++ b/src/main/webapp/resources/css/menu.css
@@ -53,6 +53,13 @@
     text-align: left;
     cursor: pointer;
     outline: none;
+    font-size: 16px;
+}
+
+.category-wrap > h2 {
+    color: #E1D070;
+    text-align: center;
+    margin-bottom: 3%;
 }
 
 .sidenav a:hover, .dropdown-btn:hover {
