--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -329,7 +329,7 @@ section > figure + figure {
 .down {
     margin-top:3%;
 }
-a.bot1{
+ .bot1{
     background:linear-gradient(to bottom, #FFFFFF, #E6E6E6) #F5F5F5 repeat-x;
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #B3B3B3;
     border-radius: 4px;
@@ -361,7 +361,7 @@ a.bot1{
 
 
 
-a.bot1:before {
+.bot1:before {
     pointer-events: none;
     position: absolute;
     z-index: -1;
@@ -379,14 +379,331 @@ a.bot1:before {
     transition-property: transform, opacity;
 }
 
-a.bot1:hover {
+.bot1:hover {
     -webkit-transform: translateY(-5px);
     -ms-transform: translateY(-5px);
     transform: translateY(-5px);
 }
-a.bot1:hover:before {
+ .bot1:hover:before {
     opacity: 1;
     -webkit-transform: translateY(5px);
     -ms-transform: translateY(5px);
     transform: translateY(5px);
+}
+a.a-btn-3 {
+    color: #FFFFFF;
+    text-decoration: none;
+    font-family: 'Oswald', Arial, sans-serif;
+}
+
+a.a-btn-3 {
+    background: #E1D070;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(#80a9da, 0), color-stop(#6f97c5, 1));
+    background: -webkit-linear-gradient(top, #80a9da 0%, #6f97c5 100%);
+    background: -moz-linear-gradient(top, #80a9da 0%, #6f97c5 100%);
+    background: -o-linear-gradient(top, #80a9da 0%, #6f97c5 100%);
+    background: linear-gradient(top, #80a9da 0%, #6f97c5 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80a9da', endColorstr='#6f97c5', GradientType=0);
+    padding-left: 20px;
+    padding-right: 80px;
+    height: 38px;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    width: 70px;
+    position: relative;
+    border: 1px solid #5d81ab;
+    -webkit-box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8) inset, 1px 1px 3px rgba(0, 0, 0, 0.2), 0px 0px 0px 4px rgba(188, 188, 188, 0.5);
+    -moz-box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8) inset, 1px 1px 3px rgba(0, 0, 0, 0.2), 0px 0px 0px 4px rgba(188, 188, 188, 0.5);
+    box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8) inset, 1px 1px 3px rgba(0, 0, 0, 0.2), 0px 0px 0px 4px rgba(188, 188, 188, 0.5);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    overflow: hidden;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+.a-btn-3-text {
+    padding-top: 5px;
+    display: block;
+    width: 0px;
+    font-size: 18px;
+    white-space: nowrap;
+    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.3);
+    color: #446388;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+}
+
+.a-btn-3-slide-text {
+    position: absolute;
+    height: 100%;
+    top: 0px;
+    right: 52px;
+    width: 0px;
+    background: #E1D070;
+    text-shadow: 0px -1px 1px #363f49;
+    color: #fff;
+    font-size: 18px;
+    white-space: nowrap;
+    text-transform: uppercase;
+    text-align: left;
+    text-indent: 10px;
+    overflow: hidden;
+    line-height: 38px;
+    -webkit-box-shadow: -1px 0px 1px rgba(255, 255, 255, 0.4), 1px 1px 2px rgba(0, 0, 0, 0.2) inset;
+    -moz-box-shadow: -1px 0px 1px rgba(255, 255, 255, 0.4), 1px 1px 2px rgba(0, 0, 0, 0.2) inset;
+    box-shadow: -1px 0px 1px rgba(255, 255, 255, 0.4), 1px 1px 2px rgba(0, 0, 0, 0.2) inset;
+    -webkit-transition: width 0.3s linear;
+    -moz-transition: width 0.3s linear;
+    -o-transition: width 0.3s linear;
+    transition: width 0.3s linear;
+}
+
+.a-btn-3-icon-right {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    height: 100%;
+    width: 52px;
+    border-left: 1px solid #5d81ab;
+    -webkit-box-shadow: 1px 0px 1px rgba(255, 255, 255, 0.4) inset;
+    -moz-box-shadow: 1px 0px 1px rgba(255, 255, 255, 0.4) inset;
+    box-shadow: 1px 0px 1px rgba(255, 255, 255, 0.4) inset;
+}
+
+.a-btn-3-icon-right span {
+    width: 38px;
+    height: 38px;
+    opacity: 0.7;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -20px 0px 0px -20px;
+    background: transparent url(/resources/images/arrow_right.png) no-repeat 50% 55%;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+.a-btn-3:hover {
+    padding-right: 140px;
+    -webkit-box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8) inset, 1px 1px 3px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8) inset, 1px 1px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8) inset, 1px 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.a-btn-3:hover .a-btn-3-text {
+    text-shadow: 0px 1px 1px #5d81ab;
+    color: #fff;
+}
+
+.a-btn-3:hover .a-btn-3-slide-text {
+    width: 57px;
+}
+
+.a-btn-3:hover .a-btn-3-icon-right span {
+    opacity: 1;
+}
+
+.a-btn-3:active {
+    position: relative;
+    top: 1px;
+    background: #E1D070;
+    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+    border-color: #80a9da;
+}
+
+.back-dialog {
+    width: 100%;
+    min-height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    position: fixed;
+    top: 0px;
+}
+
+.dialog-content {
+    position: relative;
+    overflow: hidden;
+    overflow-y: auto;
+    padding: 0 10 0 10;
+    margin: 300px auto 0px auto;
+    min-width: 150px;
+    max-width: 600px;
+    min-height: 150px;
+    max-height: 650px;
+    padding-bottom: 10px;
+    background-color: white;
+    border-radius: 6px;
+}
+
+.dialog-title {
+    margin: 0 -10 0 -10;
+    text-align: center;
+    position: relative;
+    vertical-align: middle;
+    height: 30px;
+    background-color: #383D50;
+    color: #fff;
+}
+
+.dialog-title span {
+    font-size: 25px;
+    padding-left: 10px;
+}
+
+.close-dialog {
+    position: absolute;
+    right: 0;
+    top: 0;
+    text-align: center;
+    color: #fff;
+    background-color: #383D50;
+    height: 30px;
+    width: 30px;
+    border: 0;
+    text-decoration: none;
+}
+
+.close-dialog:before {
+    font-family: Arial;
+    color: rgba(255, 255, 255, 0.9);
+    content: "x";
+    font-size: 20px;
+    text-shadow: 0 -1px rgba(0, 0, 0, 0.5);
+    outline: none;
+}
+
+/* Кнопка открытия окна */
+.button {
+    position: relative;
+    vertical-align: middle;
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-left: 8%;
+    padding-right: 8%;
+    padding-top: 4%;
+    padding-bottom: 4%;
+    font-size: 22px;
+    color: white;
+    text-align: center;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+    background: #3498db;
+    border: 0;
+    border-bottom: 2px solid #2a8bcc;
+    cursor: pointer;
+    -webkit-box-shadow: inset 0 -3px #2a8bcc;
+    box-shadow: inset 0 -3px #2a8bcc;
+    outline: none;
+}
+
+.button:active {
+    top: 1px;
+    outline: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.row {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    margin: 0 -16px;
+}
+
+.col-25 {
+    -ms-flex: 25%; /* IE10 */
+    flex: 25%;
+}
+
+.col-50 {
+    -ms-flex: 50%; /* IE10 */
+    flex: 50%;
+}
+
+.col-75 {
+    -ms-flex: 75%; /* IE10 */
+    flex: 75%;
+}
+
+.col-25,
+.col-50,
+.col-75 {
+    padding: 0 16px;
+}
+
+.container {
+    background-color: #f2f2f2;
+    padding: 5px 20px 15px 20px;
+    border: 1px solid lightgrey;
+    border-radius: 3px;
+}
+
+input[type=text] {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+label {
+    margin-bottom: 10px;
+    display: block;
+}
+
+.icon-container {
+    margin-bottom: 20px;
+    padding: 7px 0;
+    font-size: 24px;
+}
+
+.btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px;
+    margin: 10px 0;
+    border: none;
+    width: 100%;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 17px;
+}
+
+.btn:hover {
+    background-color: #45a049;
+}
+
+a {
+    color: #2196F3;
+}
+
+hr {
+    border: 1px solid lightgrey;
+}
+
+span.price {
+    float: right;
+    color: grey;
+}
+
+@media (max-width: 800px) {
+    .row {
+        flex-direction: column-reverse;
+    }
+
+    .col-25 {
+        margin-bottom: 20px;
+    }
 }
