Training program fixes

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -735,3 +735,9 @@ figure.slider figure figcaption {
     color: #fff; width: 100%;
     font-size: 2rem; padding: .6rem;
 }
+h1 {
+    text-shadow: 1px 1px 0 hsl(20,100%,50%), 2px 2px 0 hsl(20,100%,50%), 3px 3px 0 hsl(35,100%,50%), 4px 4px 0 hsl(35,100%,50%), 5px 5px 0 hsl(45,100%,50%), 6px 6px 0 hsl(45,100%,55%), 7px 7px 0 hsl(55,100%,60%), 8px 8px 0 hsl(55,100%,65%);
+    color: hsl(0,100%,40%);
+    transition: all 1s;
+    margin-bottom: 5%;
+}
