--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -641,11 +641,11 @@ a.a-btn-3 {
 }
 
 input[type=text] {
-    padding: 12px;
+    padding: 4%;
     border: 1px solid #ccc;
-    border-radius: 3px;
-    margin: -5%;
-    width: 70%;
+    border-radius: 3%;
+    width: 103%;
+    margin: -1% -1% 5%;
 }
 
 label {
